fixed modal size on mobile

--- a/style.css
+++ b/style.css
@@ -69,7 +69,6 @@ h2 {
 }
 
 h3 {
-    margin: var(--margin-space);
 	font-size: var(--font-size-h3);
 }
 
@@ -216,7 +215,7 @@ a:hover {
 #contact {
 	border: 3px solid black;
 	margin-bottom: 100px;
-	padding-bottom: 80px;
+	padding: 80px;
 }
 
 .modal {
@@ -231,20 +230,24 @@ a:hover {
   .modal[open] {
 	display: flex;
   }
+
   .model-inner {
 	background-color: var(--primary-bg-color);
 	box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
 	border : 3px solid black;
-	max-width: 600px;
 	padding: 2em;
 	margin: auto;
+	width: 350px;
   }
+
   .modal-header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	border-bottom: 2px solid black;
+	margin-bottom: 20px;
   }
+  
   #modal-overlay {
 	width: 100%;
 	height: 100%;
@@ -372,4 +375,9 @@ a:hover {
 	from, to { border-color: transparent }
 	50% { border-color: var(--secondary-bg-color); }
   }
+
+  .model-inner {
+	width: 700px;
+  }
+
 }
